# helios-os

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  sonar-project.properties  tasks.md  tsconfig.json  vitest.config.ts
.github/workflows/: test.yml
apps/: bash.ts  browser.ts  cat.ts  desktop.ts  echo.ts  index.ts  init.ts  kill.ts  login.ts  ls.ts  mkdir.ts  mv.ts  nano.ts  ping.ts  ps.ts  rm.ts  snapshot.ts  sshClient.ts  ulimit.ts  webBrowser.ts
apps/bin-src/: browser.ts  desktop.ts  kill.ts  ls.ts  mkdir.ts  mv.ts  ps.ts  reboot.ts  sleep.ts  snapshot.ts  ulimit.ts
apps/cli/: bash.ts  init.ts  kill.ts  login.ts  ls.ts  mkdir.ts  mv.ts  nano.ts  ping.ts  ps.ts  rm.ts  snapshot.ts  ulimit.ts
apps/examples/: browser.ts  coin.ts  desktop.ts  helloGui.ts  sshClient.ts  webBrowser.ts
apps/types/: syscalls.d.ts
core/: eventBus.ts  kernel.test.ts  kernel.ts  manifest.ts  nic.test.ts  routes.test.ts  snapshot.test.ts
core/fs/: async.ts  bin.ts  generatedApps.ts  index.test.ts  index.ts  persistent.test.ts  persistent.ts  pure.ts  sqlite.ts
core/kernel/: error.ts  index.ts  process.ts  (+2 more)
docs/: README.md  architecture.md  boot_performance.md  ftp_example.md  gui_shell_sandbox.md  host.md  kernel.md  kernel_mvp.md  network_example.md  networking.md  persistent_fs.md  themes.md  ui.md  workflow.md
host/: Cargo.toml  build.rs  tauri.conf.json
host/src/: db.rs  main.rs
lib/: gui.d.ts  gui.ts
tools/: build-apps.ts  build.ts  helios.ts
ui/: constants.ts  index.html  index.tsx
(+82 files in other folders)
